# mpu6050

./: CMakeLists.txt
inc/: mpu6050.h
src/: main.c  mpu6050.c
